--- a/web/documentation.pug
+++ b/web/documentation.pug
@@ -33,6 +33,7 @@ block contents
             "magicCardsInfoCode" : "ne",   // The code that magiccards.info uses for the set. Only present if magiccards.info has this set
             "releaseDate" : "2000-02-14"   // When the set was released (YYYY-MM-DD). For promo sets, the date the first card was released.
             "border" : "black",            // The type of border on the cards, either "white", "black" or "silver"
+            "foil" : "some",               // Whether the set contains premium foil cards, either "some", "all", "none", "alt", or "unknown"
             "type" : "expansion",          // Type of set. One of: "core", "expansion", "reprint", "box", "un",
                                            //                      "from the vault", "premium deck", "duel deck",
                                            //                      "starter", "commander", "planechase", "archenemy",
@@ -228,6 +229,11 @@ block contents
             td "black"
             td
               | If the border for this specific card is DIFFERENT than the border specified in the top level set JSON, then it will be specified here. (Example: Unglued has silver borders, except for the lands which are black bordered)
+          tr
+            td foil
+            td "some"
+            td
+              | If the foil availability for this specific card is DIFFERENT than that specified in the top level set JSON, then it will be specified here. The possible values are "some" (this card exists both in foil and regular versions, the norm for current sets), "all" (this card is always foil), "none" (this card is never foil), "alt" (this card exists both in foil and regular versions, but the foils have additional differences and are thus listed as their own card), or "unknown" (no information about this card, pull requests welcome).
           tr
             td timeshifted
             td true
